fixed layout issues

--- a/static/global.css
+++ b/static/global.css
@@ -44,6 +44,7 @@ body {
 	color: var(--font-color);
 	overflow-x: hidden;
 	max-height: 100vh;
+	position: relative;
 	width: 100%;
 }
 
